--- a/scss/main.scss
+++ b/scss/main.scss
@@ -2,4 +2,5 @@
 @import './components/about';
 @import './components/blog';
 @import './components/contact';
+@import './components/footer';
 @import './utils/media';
