--- a/scss/components/contact.scss
+++ b/scss/components/contact.scss
@@ -1,10 +1,14 @@
 .contract-container {
   @include container-base;
-  @include header-base;
+  text-align: left;
+}
+
+.contract-picture {
   background-image: url(../images/contact.jpg);
   background-size: cover;
   background-position: center;
   height: 40vh;
+  width: 100%;
   color: #efeeee;
   h1 {
     background-color: #00000033;
@@ -14,16 +18,13 @@
 .contact-text {
   padding: 2em;
   margin: 0 auto;
-  width: 66%;
+  width: 70%;
+  max-width: 600px;
+  min-width: 320px;
   background-color: #fff;
   animation: fade 1s ease;
-}
-
-.social-container {
-  display: flex;
-  justify-content: flex-end;
-  svg {
-    margin: 0 3px;
+  h2 {
+    margin-bottom: 1rem;
   }
 }
 
@@ -50,5 +51,5 @@ input[type="submit"] {
 }
 
 input[type="submit"]:hover {
-  background-color: #4d4d4d;
+  background-color: #181818;
 }
